--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
-node_modules/
-bower_components/
+/node_modules
+/dist
+/.tmp
+/.sass-cache
+/bower_components
 *.log
 
 build/
 dist/
+.gitignore
+.project
+.settings
